# aml-fraud-detection

./: .coverage  .gitignore  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  02_unsupervised_models.ipynb  03_lstm_autoencoder.ipynb  04_ensemble_evaluation.ipynb  05_alert_budget_cost_sensitive.ipynb  06_drift_monitoring.ipynb
src/data/: generator.py  preprocessor.py
src/evaluation/: alert_budget.py  metrics.py
src/models/: autoencoder.py  ensemble.py  isolation_forest.py
src/monitoring/: drift.py
src/sar/: workflow.py
tests/: test_alert_budget.py  test_drift.py  test_generator.py  test_models.py  test_sar.py
