[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "transaction-anomaly-detection"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "torch>=2.1",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.44",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "evidently>=0.4",
    "great-expectations>=0.18",
    "imbalanced-learn>=0.11",
    "scipy>=1.11",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
